<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>consulo</groupId>
  <artifactId>group</artifactId>
  <version>2-SNAPSHOT</version>

  <packaging>pom</packaging>

  <modules>
    <module>arch/managment</module>
    <module>arch/global</module>
    <module>arch/ide</module>
    <module>arch/ide-provided</module>

    <module>distribution</module>

    <module>sandbox/desktop-awt</module>
    <module>sandbox/desktop-swt</module>
    <module>sandbox/web</module>
    <module>sandbox/sand-language-plugin</module>

    <module>modules/desktop-awt/desktop-awt-hacking</module>
    <module>modules/desktop-awt/desktop-bootstrap</module>
    <module>modules/desktop-awt/desktop-ui-impl</module>
    <module>modules/desktop-awt/desktop-platform-impl</module>
    <module>modules/desktop-awt/desktop-lang-impl</module>
    <module>modules/desktop-awt/desktop-ui-laf-impl</module>
    <module>modules/desktop-awt/desktop-graph-impl</module>
    <module>modules/desktop-awt/desktop-util-awt</module>
    <module>modules/desktop-awt/desktop-base-laf-icon-library</module>
    <module>modules/desktop-awt/desktop-plugin</module>

    <module>modules/desktop-swt/desktop-swt-bootstrap</module>
    <module>modules/desktop-swt/desktop-swt-plugin</module>
    <module>modules/desktop-swt/desktop-swt-platform-impl</module>
    <module>modules/desktop-swt/desktop-swt-ui-impl</module>

    <module>modules/web/web-bootstrap</module>
    <module>modules/web/web-ui-impl-client</module>
    <module>modules/web/web-ui-impl-shared</module>
    <module>modules/web/web-ui-impl-server</module>
    <module>modules/web/web-platform-api</module>
    <module>modules/web/web-platform-impl</module>
    <module>modules/web/web-lang-impl</module>
    <module>modules/web/web-plugin</module>

    <module>modules/boot/bootstrap</module>
    <module>modules/boot/container-api</module>
    <module>modules/boot/container-impl</module>
    <module>modules/boot/util-nodep</module>

    <module>modules/base/annotation</module>
    <module>modules/base/annotations</module>
    <module>modules/base/analysis-api</module>
    <module>modules/base/analysis-impl</module>
    <module>modules/base/base-localize-library</module>
    <module>modules/base/base-icon-library</module>
    <module>modules/base/build-ui-api</module>
    <module>modules/base/build-ui-impl</module>
    <module>modules/base/built-in-server-api</module>
    <module>modules/base/built-in-server-impl</module>
    <module>modules/base/core-api</module>
    <module>modules/base/core-impl</module>
    <module>modules/base/compiler-api</module>
    <module>modules/base/compiler-impl</module>
    <module>modules/base/compiler-build-ui-impl</module>
    <module>modules/base/diff-api</module>
    <module>modules/base/diff-impl</module>
    <module>modules/base/disposer-api</module>
    <module>modules/base/disposer-impl</module>
    <module>modules/base/dvcs-api</module>
    <module>modules/base/dvcs-impl</module>
    <module>modules/base/dvcs-impl-testing</module>
    <module>modules/base/duplicates-analysis</module>
    <module>modules/base/editor-ui-api</module>
    <module>modules/base/editor-ui-ex</module>
    <module>modules/base/external-service-api</module>
    <module>modules/base/external-service-impl</module>
    <module>modules/base/external-storage-impl</module>
    <module>modules/base/external-system-api</module>
    <module>modules/base/external-system-impl</module>
    <module>modules/base/external-tools-api</module>
    <module>modules/base/external-tools-impl</module>
    <module>modules/base/execution-api</module>
    <module>modules/base/graph-api</module>
    <module>modules/base/graph-impl</module>
    <module>modules/base/indexing-api</module>
    <module>modules/base/indexing-impl</module>
    <module>modules/base/platform-api</module>
    <module>modules/base/platform-impl</module>
    <module>modules/base/platform-resources</module>
    <module>modules/base/platform-resources-en</module>
    <module>modules/base/project-model-api</module>
    <module>modules/base/project-model-impl</module>
    <module>modules/base/lang-api</module>
    <module>modules/base/lang-impl</module>
    <module>modules/base/lang-injecting-impl</module>
    <module>modules/base/lang-impl-testing</module>
    <module>modules/base/lvcs-api</module>
    <module>modules/base/lvcs-impl</module>
    <module>modules/base/lvcs-impl-testing</module>
    <module>modules/base/localize-api</module>
    <module>modules/base/localize-impl</module>
    <module>modules/base/task-api</module>
    <module>modules/base/task-impl</module>
    <module>modules/base/test</module>
    <module>modules/base/remote-servers-api</module>
    <module>modules/base/remote-servers-agent-rt</module>
    <module>modules/base/remote-servers-impl</module>
    <module>modules/base/runtime-api</module>
    <module>modules/base/runtime-impl</module>
    <module>modules/base/vcs-api</module>
    <module>modules/base/vcs-api-core</module>
    <module>modules/base/vcs-log-graph-api</module>
    <module>modules/base/vcs-log-graph-impl</module>
    <module>modules/base/vcs-log-graph-impl-testing</module>
    <module>modules/base/vcs-log-api</module>
    <module>modules/base/vcs-log-impl</module>
    <module>modules/base/vcs-log-impl-testing</module>
    <module>modules/base/vcs-impl</module>
    <module>modules/base/ui-api</module>
    <module>modules/base/ui-impl</module>
    <module>modules/base/vcs-impl-testing</module>
    <module>modules/base/usage-view</module>
    <module>modules/base/util-deprecated</module>
    <module>modules/base/util/util-rmi</module>
    <module>modules/base/util/util-lang</module>
    <module>modules/base/util/util-collection</module>
    <module>modules/base/util/util-collection-primitive</module>
    <module>modules/base/util/util-collection-via-trove</module>
    <module>modules/base/util/util-collection-runtime</module>
    <module>modules/base/util/util-concurrent</module>
    <module>modules/base/util/util-advanced-proxy</module>
    <module>modules/base/util/util-dataholder</module>
    <module>modules/base/util/util-jdom</module>
    <module>modules/base/util/util-io</module>
    <module>modules/base/util/util-serializer</module>
    <module>modules/base/util-testing</module>
    <module>modules/base/xcoverage-data</module>
    <module>modules/base/xcoverage-impl</module>
    <module>modules/base/xdebugger-api</module>
    <module>modules/base/xdebugger-impl</module>
    <module>modules/base/xtest-impl</module>
    <module>modules/base/xtest-sm-impl</module>
    <module>modules/base/base-plugin</module>

    <module>modules/base/injecting/injecting-api</module>
    <module>modules/base/injecting/injecting-pico-impl</module>
    <module>modules/base/hacking-java-base</module>

    <module>modules/base/language-editor-api</module>

    <module>modules/base/logging/logging-api</module>
    <module>modules/base/logging/logging-slf4j-binding-impl</module>
    <module>modules/base/logging/logging-log4j2-impl</module>

    <module>modules/base/test-impl</module>

    <module>modules/base/trash-can</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <fork>true</fork>
        </configuration>
        <!--workaround for java 9-->
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-archiver</artifactId>
            <version>2.4.4</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
        <!--workaround for java 9-->
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-archiver</artifactId>
            <version>2.4.4</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>